--- a/sponsors.html
+++ b/sponsors.html
@@ -641,7 +641,7 @@
     <!-- Why Sponsor Area End -->
 
     <!-- Sponsor Packages Start -->
-    <!-- <section class="sponsor-levels section-padding-100-0">
+    <section class="sponsor-levels section-padding-100-0">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -656,121 +656,285 @@
         </div>
 
         <div class="row">
+          <!-- Diamond -->
           <div class="col-12 col-md-6 col-lg-4">
             <div
               class="sponsor-package text-center wow fadeInUp"
-              data-wow-delay="300ms"
+              data-wow-delay="150ms"
             >
-              <h3>Platinum</h3>
+              <h3>
+                Diamond
+                <span
+                  style="
+                    display: block;
+                    font-size: 0.75em;
+                    font-weight: 600;
+                    color: #dc4405;
+                  "
+                  >US$100K</span
+                >
+              </h3>
               <div class="sponsor-benefits">
                 <ul>
                   <li>
-                    <i class="fas fa-check-circle"></i> Prime exhibition space
-                    (6x3m)
+                    <i class="fas fa-check-circle"></i> 10 complimentary
+                    registrations
                   </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Prime exhibition booth
+                    (9sqm) – free
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Host a session / panel +
+                    speaking slot
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Brand video in session
+                    transitions
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Logo on ALL printed &
+                    digital materials
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Event app splash &
+                    programme pages
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> 5 branded collateral
+                    items (delegate pack)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Dedicated meeting room
+                    (all days)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Announced as main
+                    conference partner
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Full social & media
+                    coverage
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- Platinum -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="sponsor-package text-center wow fadeInUp"
+              data-wow-delay="200ms"
+            >
+              <h3>
+                Platinum
+                <span
+                  style="
+                    display: block;
+                    font-size: 0.75em;
+                    font-weight: 600;
+                    color: #dc4405;
+                  "
+                  >US$50K</span
+                >
+              </h3>
+              <div class="sponsor-benefits">
+                <ul>
                   <li>
                     <i class="fas fa-check-circle"></i> 8 complimentary
                     registrations
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Speaking opportunity in
-                    main program
+                    <i class="fas fa-check-circle"></i> Prime booth (9sqm) – 50%
+                    discount
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Logo on all conference
-                    materials
+                    <i class="fas fa-check-circle"></i> Host a session / panel +
+                    speaking slot
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Full-page ad in
-                    conference program
+                    <i class="fas fa-check-circle"></i> Logo on all printed &
+                    digital materials
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Sponsor mention in all
-                    media releases
+                    <i class="fas fa-check-circle"></i> Event app programme
+                    pages
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Dedicated social media
-                    promotion
+                    <i class="fas fa-check-circle"></i> 3 branded collateral
+                    items
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Access to attendee
-                    contact information
+                    <i class="fas fa-check-circle"></i> Meeting room (2
+                    conference days)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Full social & media
+                    coverage
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-
+          <!-- Gold -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="sponsor-package text-center wow fadeInUp"
+              data-wow-delay="250ms"
+            >
+              <h3>
+                Gold
+                <span
+                  style="
+                    display: block;
+                    font-size: 0.75em;
+                    font-weight: 600;
+                    color: #dc4405;
+                  "
+                  >US$25K</span
+                >
+              </h3>
+              <div class="sponsor-benefits">
+                <ul>
+                  <li>
+                    <i class="fas fa-check-circle"></i> 6 complimentary
+                    registrations
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Booth (9sqm) – pay full
+                    price
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Session / panel
+                    participation + speaking
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Logo on all materials
+                    (printed + digital)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Event app programme
+                    pages
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> 2 branded collateral
+                    items
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Meeting room (1
+                    conference day)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Social media on all
+                    artworks
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <!-- Silver -->
           <div class="col-12 col-md-6 col-lg-4">
             <div
               class="sponsor-package text-center wow fadeInUp"
               data-wow-delay="300ms"
             >
-              <h3>Gold</h3>
+              <h3>
+                Silver
+                <span
+                  style="
+                    display: block;
+                    font-size: 0.75em;
+                    font-weight: 600;
+                    color: #dc4405;
+                  "
+                  >US$15K</span
+                >
+              </h3>
               <div class="sponsor-benefits">
                 <ul>
                   <li>
-                    <i class="fas fa-check-circle"></i> Exhibition space (3x3m)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> 5 complimentary
+                    <i class="fas fa-check-circle"></i> 4 complimentary
                     registrations
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Panel participation
+                    <i class="fas fa-check-circle"></i> Booth (9sqm) – pay full
+                    price
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Panel speaking
                     opportunity
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Logo on main conference
+                    <i class="fas fa-check-circle"></i> Logo on selected digital
                     materials
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Half-page ad in
-                    conference program
+                    <i class="fas fa-check-circle"></i> Event app sponsor page
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Recognition in selected
-                    media releases
+                    <i class="fas fa-check-circle"></i> 1 branded collateral
+                    item
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Group social media
-                    mention
+                    <i class="fas fa-check-circle"></i> Meeting room (½
+                    conference day)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Social media (all
+                    artworks)
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-
+          <!-- Bronze -->
           <div class="col-12 col-md-6 col-lg-4">
             <div
               class="sponsor-package text-center wow fadeInUp"
-              data-wow-delay="300ms"
+              data-wow-delay="350ms"
             >
-              <h3>Silver</h3>
+              <h3>
+                Bronze
+                <span
+                  style="
+                    display: block;
+                    font-size: 0.75em;
+                    font-weight: 600;
+                    color: #dc4405;
+                  "
+                  >US$7.5K</span
+                >
+              </h3>
               <div class="sponsor-benefits">
                 <ul>
                   <li>
-                    <i class="fas fa-check-circle"></i> Exhibition space (2x2m)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> 3 complimentary
+                    <i class="fas fa-check-circle"></i> 2 complimentary
                     registrations
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Logo on conference
-                    website
+                    <i class="fas fa-check-circle"></i> Booth (9sqm) – pay full
+                    price
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Quarter-page ad in
-                    conference program
+                    <i class="fas fa-check-circle"></i> Logo on website sponsor
+                    page
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Group social media
-                    mention
+                    <i class="fas fa-check-circle"></i> Logo on selected digital
+                    materials
                   </li>
                   <li>
-                    <i class="fas fa-check-circle"></i> Recognition in
-                    conference materials
+                    <i class="fas fa-check-circle"></i> Event app sponsor page
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Social media (selected
+                    items)
+                  </li>
+                  <li>
+                    <i class="fas fa-check-circle"></i> Digital recognition at
+                    ceremonies
                   </li>
                 </ul>
               </div>
@@ -792,7 +956,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- Sponsor Packages End -->
 
     <!-- Contact Sponsor Area Start -->
