--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         font-weight: 800;
         line-height: 1.2;
         margin-bottom: 20px;
+        color: #ffffff; 
       }
       @media (min-width: 992px) {
         .esg-badge-title {
@@ -465,6 +466,45 @@
         width: 14px;
         height: 14px;
       }
+      /* Hosts strip */
+      .hosts-section {
+        background: #fff;
+      }
+      .hosts-line {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+        padding: 15px 10px;
+      }
+      .host-item {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+        white-space: nowrap;
+      }
+      .host-item img {
+        max-height: 70px;
+        max-width: 160px;
+        object-fit: contain;
+      }
+      .host-label {
+        font-weight: 600;
+        text-transform: uppercase;
+        color: #333;
+        font-size: 14px;
+        letter-spacing: 0.5px;
+      }
+      @media (max-width: 600px) {
+        .hosts-line {
+          gap: 30px;
+        }
+        .host-item {
+          flex-direction: column;
+          gap: 6px;
+        }
+      }
 
       .hero-slide-1 {
         background: url('img/bg-img/bg-2.jpg') no-repeat center center/cover;
@@ -480,6 +520,11 @@
 
       .hero-slide-4 {
         background: url('img/bg-img/bg-5.jpeg') no-repeat center center/cover;
+      }
+      .hero-slide-5 {
+        background: #ffffff url('img/core-img/AELP-ASSDA E-Flier (Asea)-02.jpg')
+          no-repeat center center;
+        background-size: contain;
       }
 
       .hero-overlay {
@@ -1125,7 +1170,9 @@
           <li data-target="#heroCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#heroCarousel" data-slide-to="1"></li>
           <li data-target="#heroCarousel" data-slide-to="2"></li>
+          <!-- Flyer -->
           <li data-target="#heroCarousel" data-slide-to="3"></li>
+          <li data-target="#heroCarousel" data-slide-to="4"></li>
         </ol>
 
         <div class="carousel-inner">
@@ -1207,7 +1254,12 @@
             </div>
           </div>
 
-          <!-- Slide 3 -->
+          <!-- Slide 3 (AELP-ASSDA Stakeholder Forum flyer) -->
+          <div class="carousel-item hero-slide-5">
+            <!-- Intentionally no overlay text/buttons -->
+          </div>
+
+          <!-- Slide 4 -->
           <div class="carousel-item hero-slide-3">
             <div class="hero-overlay"></div>
             <div class="container">
@@ -1243,7 +1295,7 @@
             </div>
           </div>
 
-          <!-- Slide 4 -->
+          <!-- Slide 5 -->
           <div class="carousel-item hero-slide-4">
             <div class="hero-overlay"></div>
             <div class="container">
@@ -1301,50 +1353,27 @@
     </section>
 
     <div
-      class="hosts-section py-3"
-      style="
-        background-color: #ffffff;
-        border-bottom: 1px solid #eaeaea !important;
-        margin-top: 50px;
-      "
+      class="hosts-section"
+      style="border-bottom: 1px solid #eaeaea !important; margin-top: 50px"
     >
       <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-5 d-flex align-items-center justify-content-end">
-            <span
-              style="
-                font-weight: 600;
-                text-transform: uppercase;
-                color: #333;
-                font-size: 14px;
-                margin-right: 15px;
-              "
-              >HOSTED BY</span
-            >
+        <div class="hosts-line">
+          <div class="host-item">
+            <span class="host-label">HOSTED BY</span>
             <img
               src="img/members/13_rwanda_stock-1-150x150.png"
               alt="Rwanda Stock Exchange"
-              style="max-height: 70px"
             />
           </div>
-          <div class="col-md-2 text-center d-none d-md-block">
-            <div style="margin: 0 auto; margin-left: 10px"></div>
+          <div class="host-item">
+            <span class="host-label">IN ASSOCIATION WITH</span>
+            <img src="img/core-img/logo_asea.png" alt="ASEA" />
           </div>
-          <div class="col-md-5 d-flex align-items-center justify-content-start">
-            <span
-              style="
-                font-weight: 600;
-                text-transform: uppercase;
-                color: #333;
-                font-size: 14px;
-                margin-right: 15px;
-              "
-              >IN ASSOCIATION WITH</span
-            >
+          <div class="host-item">
+            <span class="host-label">FEATURING</span>
             <img
-              src="img/core-img/logo_asea.png"
-              alt="ASEA"
-              style="max-height: 70px"
+              src="img/core-img/esg-awards.jpeg"
+              alt="Pan-Africa ESG Awards"
             />
           </div>
         </div>
