--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         font-weight: 800;
         line-height: 1.2;
         margin-bottom: 20px;
-        color: #ffffff; 
+        color: #ffffff;
       }
       @media (min-width: 992px) {
         .esg-badge-title {
@@ -1535,10 +1535,10 @@
             aria-label="Learn more about the Pan-Africa ESG Awards"
             >Explore ESG Awards</a
           >
-          <div class="row justify-content-center">
+          <!-- <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="esg-video-wrap fade-in-up">
-                <!-- Optional teaser video: replace VIDEO_ID with final YouTube ID -->
+                
                 <iframe
                   src="https://www.youtube.com/embed/VIDEO_ID?rel=0"
                   title="ESG Awards Teaser"
@@ -1547,11 +1547,10 @@
                 ></iframe>
               </div>
               <p class="esg-disclaimer">
-                Gala date assumed (Nov 27, 2025 19:00 CAT) – adjust in script
-                when final.
+                Gala date assumed (Nov 27, 2025 19:00 CAT)
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
