Jude Chiemeka new photo

--- a/speakers.html
+++ b/speakers.html
@@ -1012,7 +1012,7 @@
             <div class="speaker-card" data-category="media">
               <div class="speaker-image">
                 <img
-                  src="img/speakers/Jude Chiemeka.png"
+                  src="img/speakers/Jude Chiemeka.jpg"
                   alt="Izabella Kaminska"
                 />
                 <div class="speaker-category">CEO</div>
@@ -1356,7 +1356,7 @@
               <div class="col-md-4">
                 <div class="speaker-modal-image">
                   <img
-                    src="img/speakers/Jude Chiemeka.png"
+                    src="img/speakers/Jude Chiemeka.jpg"
                     alt="Jude Chiemeka"
                   />
                 </div>
