Jude Chiemeka title

--- a/speakers.html
+++ b/speakers.html
@@ -442,6 +442,7 @@
         transition: all 0.3s ease;
         margin-bottom: 30px;
         position: relative;
+        height: 525px;
       }
 
       .speaker-card:hover {
@@ -1026,7 +1027,7 @@
               </div>
               <div class="speaker-info">
                 <h3>Jude Chiemeka</h3>
-                <h4>CEO, Nigerian Exchange Group</h4>
+                <h4>CEO, Nigerian Exchange Limited</h4>
                 <p></p>
                 <a
                   href="#"
