--- a/speakers.html
+++ b/speakers.html
@@ -892,7 +892,7 @@
                   src="img/speakers/Rwabukumba.jpg"
                   alt="Pierre Celestin Rwabukumba"
                 />
-                <div class="speaker-category">CEO</div>
+                <div class="speaker-category">President</div>
                 <div class="speaker-overlay">
                   <div class="speaker-social">
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
